[tool.poetry]
name = "AGiXT"
version = "v1.1.73-beta"
description = "An Artificial Intelligence Automation Platform. AI Instruction management from various providers, has an adaptive memory, and a versatile plugin system with many commands including web browsing. Supports many AI providers and models and growing support every day."
homepage = "https://AGiXT.com"
documentation = "https://AGiXT.com"
keywords = ["AI", "AGI", "Agent", "skynet"]
license = "MIT"
authors = ["Josh XT <josh@devxt.com>"]
maintainers = [
    "localAGI <132956819+localagi@users.noreply.github.com>"
]
readme = "docs/README.md"
packages = [
    { include = "agixt" },
]

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.10"

argparse = "*"
anthropic = "*"
beautifulsoup4 = "*"
captcha-solver = "*"
chromadb = "*"
docker = "*"
duckduckgo_search = "3.3.0"
fastapi = "*"
uvicorn = "*"
gitpython = "*"
google-api-python-client = "*"
GoogleBard = "*"
google-auth = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
gtts = "*"
InstructorEmbedding = "*"
jsonschema = "*"
openai = "*"
playwright = "*"
playsound = "1.2.2"
pre-commit = "*"
pytz = "*"
pynacl = "*"
python-git = "*"
PyGithub = "*"
selenium = "*"
sendgrid = "*"
tiktoken = "*"
tweepy = "*"
webdriver_manager = "*"
spacy = "*"
discord = "*"
EdgeGPT = "*"
google-generativeai = "*"
google-cloud-aiplatform = "*"
####
streamlit = "*"
protobuf = "3.20.*"
####
docx2txt = "*"
pdfplumber = "*"
ffmpeg = "*"
hugchat = "*"
flask-bcrypt = "*"
revChatGPT = "*"
random-password-generator = "*"
cryptography = "38.0.4"


#### For local providers
torch = { version = "*", source = "pytorch.org", optional = true}
transformers = { version = "^4.29.2", optional = true }
sentence-transformers = { version = "^2.2.2", optional = true }
llama-cpp-python = { version = "^0.1.55", optional = true }
accelerate = { version = "^0.19.0", optional = true } 
nomic = { version = "^1.1.0", optional = true } 


[tool.poetry.group.gpt4free]
optional = true

[tool.poetry.group.gpt4free.dependencies]
gpt4free = { git = "https://github.com/xtekky/gpt4free.git", rev = "6598265e2bf46ce1054736cd64db9ff42a358331" }


[tool.poetry.extras]
brainz = ["torch", "transformers", "sentence-transformers", "llama-cpp-python", "accelerate", "nomic"]


[[tool.poetry.source]]
name = "pytorch.org"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

