[project]
name = "agixt-mcp-server"
version = "1.0.0"
description = "Claude Code MCP Server Extension for AGiXT - Enables AI-powered automation through AGiXT agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AGiXT Team" }
]
keywords = ["agixt", "mcp", "claude", "ai", "automation", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
agixt-mcp-server = "agixt_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agixt_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
